# inference-runtime

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md
crates/ir-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ir-ffi/src/: context.rs  error.rs  lib.rs  streaming.rs  types.rs
crates/ir-model/: Cargo.toml
crates/ir-model/src/: architecture.rs  error.rs  lib.rs
crates/ir-model/src/gguf/: header.rs  metadata.rs  mod.rs  reader.rs  tensor_info.rs
crates/ir-model/src/llama/: config.rs  kv_cache.rs  layers.rs  mod.rs
crates/ir-model/src/tokenizer/: bpe.rs  mod.rs  vocab.rs
crates/ir-sampler/: Cargo.toml
crates/ir-sampler/src/: greedy.rs  lib.rs  repetition.rs  sampler.rs  temperature.rs  top_k.rs  top_p.rs
crates/ir-tensor/: Cargo.toml
crates/ir-tensor/src/: backend.rs  dtype.rs  error.rs  lib.rs  shape.rs  storage.rs  tensor.rs
crates/ir-tensor/src/cpu/: matmul.rs  mod.rs  unary.rs
crates/ir-tensor/src/metal/: mod.rs
go-wrapper/: go.mod  main.go
go-wrapper/api/: handlers.go  routes.go  server.go  types.go
go-wrapper/bindings/: bridge.c  bridge.h  ir_runtime.h  runtime.go
go-wrapper/cmd/: info.go  list.go  root.go  run.go  serve.go
go-wrapper/engine/: engine.go  options.go
go-wrapper/registry/: download.go  manager.go  manifest.go  store.go
