[package]
name = "ir-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GGUF model loading, tokenizer, and LLaMA architecture for inference-runtime"

[dependencies]
ir-tensor = { path = "../ir-tensor" }
thiserror = "2"
half = "2"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
